# bare-server-rust

./: Cargo.toml  README.md  rustfmt.toml
src/: error.rs  main.rs  routes.rs  util.rs  v3.rs  version.rs
