[package]
name = "tomphttp-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salvo = { version= "0.41" }
tokio = { version = "1", features = ["macros"] }
serde = { version = "1.0" }
serde_json = "1.0"
reqwest = "0.11.18"
once_cell = "1.17.1"