[package]
name = "tomphttp-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salvo = { version = "0.44", features = ["logging"] }
miette = { version = "5.9.0", features = ["fancy"]}
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0" }
serde_json = "1.0"
reqwest = "0.11.18"
once_cell = "1.17.1"
thiserror = "1.0.40"
tracing-subscriber = "0.3.17"